<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.asus_wh.docs_app.RegistActivity">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <cutsom_imageview.CircleImageView
        android:id="@+id/regist_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="5px"
        android:layout_gravity="left"
        android:src="@drawable/default_head"
        app:border_width="2dp"
        app:border_color="@color/borderHead"/>
 <!--   <ImageView
        android:id="@+id/regist_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        app:srcCompat="@mipmap/ic_launcher_round"/>-->
</LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:id="@+id/regist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/regist_name"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:id="@+id/regist_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/regist_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:id="@+id/regist_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/regist_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:id="@+id/second_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/second_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/regist_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_reset"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=""/>

        <Button
            android:id="@+id/regist_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/btn_regist"/>
    </LinearLayout>
</LinearLayout>
